[gd_scene load_steps=8 format=3 uid="uid://bptsynp1ohnt8"]

[ext_resource type="AudioStream" uid="uid://dfrmaq7gmpnxv" path="res://entity/bosses/cthulhu/death_sfx.wav" id="1_5seyf"]
[ext_resource type="Script" path="res://entity/bosses/cthulhu/cthulhu_death.gd" id="1_hgre8"]

[sub_resource type="Gradient" id="Gradient_hmmww"]
offsets = PackedFloat32Array(0.0116732, 1)
colors = PackedColorArray(0.445007, 4.57242e-07, 0.251363, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ukug4"]
gradient = SubResource("Gradient_hmmww")

[sub_resource type="Curve" id="Curve_rgkyt"]
_data = [Vector2(0.285959, 0.979338), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vf3e1"]
curve = SubResource("Curve_rgkyt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wyytb"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 44.51
initial_velocity_max = 525.22
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 50.0
scale_curve = SubResource("CurveTexture_vf3e1")
scale_over_velocity_min = 231.46
scale_over_velocity_max = 332.35
color_ramp = SubResource("GradientTexture1D_ukug4")

[node name="CthulhuDeath" type="GPUParticles2D"]
z_index = 3
emitting = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_wyytb")
one_shot = true
explosiveness = 1.0
script = ExtResource("1_hgre8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_5seyf")
volume_db = 10.0
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShockwaveTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ShockwaveStopTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShockwaveTimer" to="." method="_on_shockwave_timer_timeout"]
[connection signal="timeout" from="ShockwaveStopTimer" to="." method="_on_shockwave_stop_timer_timeout"]
